--- a/src/app/home/input/input-info-supplier/input-info-supplier.component.html
+++ b/src/app/home/input/input-info-supplier/input-info-supplier.component.html
@@ -35,8 +35,8 @@
             </ng-template>
         </div>
     </div>
-
-    <div class="position-absolute" style="bottom: 16px; width: calc(100% - 32px);">
+<nz-divider></nz-divider>
+    <div>
         <button class="btn btn-success w-100 btn-lg" (click)="inputProduct()">Nhập hàng</button>
     </div>
 </div>
