--- a/src/app/home/retail/retail-template/retail-template.component.css
+++ b/src/app/home/retail/retail-template/retail-template.component.css
@@ -13,9 +13,16 @@
 .customer__in__bill {
   background-color: white;
   /* box-shadow: 1px 1px 1px 1px; */
-  box-shadow: 0px 0 30px rgb(1 41 112 / 10%);
+  box-shadow: 0 0 30px rgb(1 41 112 / 10%);
   border-radius: 5px;
   height: 85vh;
+}
+.broken__product__info{
+  background-color: white;
+  /* box-shadow: 1px 1px 1px 1px; */
+  box-shadow: 0 0 30px rgb(1 41 112 / 10%);
+  border-radius: 5px;
+  /*height: 85vh;*/
 }
 
 .ant-modal {
