--- a/src/app/home/sample-prescription/sample-prescription-template/sample-prescription-template.component.html
+++ b/src/app/home/sample-prescription/sample-prescription-template/sample-prescription-template.component.html
@@ -1,1 +1,18 @@
-<p>sample-prescription-template works!</p>
+<div>
+  <nz-tabset
+    style="height:220px;"
+    nzTabPosition="left"
+  >
+    <nz-tab nzTitle="ok">
+      <nz-tabset
+        style="height:220px;"
+        nzTabPosition="left"
+      >
+        <nz-tab nzTitle="ok">
+          ahdgfhjds
+        </nz-tab>
+      </nz-tabset>
+    </nz-tab>
+
+  </nz-tabset>
+</div>
