--- a/src/app/home/input/input-template/input-template.component.css
+++ b/src/app/home/input/input-template/input-template.component.css
@@ -16,7 +16,7 @@
   /* box-shadow: 1px 1px 1px 1px; */
   box-shadow: 0px 0 30px rgb(1 41 112 / 10%);
   border-radius: 5px;
-  height: 85vh;
+  /*height: 85vh;*/
 }
 
 .ant-modal {
