--- a/src/app/home/retail/broken-product/broken-product.component.html
+++ b/src/app/home/retail/broken-product/broken-product.component.html
@@ -1,5 +1,13 @@
-<div>
-  <div style="position: absolute; bottom: 16px; width: calc(100% - 32px);" class="d-flex align-content-end flex-wrap">
+<div style="text-align: center; padding: 30px 0">
+
+  <div>
+    <h5 class="mb-3">Thông tin xuất hỏng</h5>
+
+    <h6>Tổng tiền : {{totalBillPrice | currency:'VND'}}</h6>
+  </div>
+
+<nz-divider></nz-divider>
+  <div style="width: calc(100% - 32px); margin: auto">
     <button class="w-100 btn btn-success btn-lg" (click)="exportBrokenProduct()">
       <span>Xuất hỏng</span>
     </button>
